# ChangeLog for kde-base/kooka
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kooka/Attic/ChangeLog,v 1.35 2005/12/17 13:37:06 corsair Exp $

  17 Dec 2005; Markus Rothe <corsair@gentoo.org> kooka-3.5.0.ebuild:
  Added ~ppc64

  12 Dec 2005; Joseph Jezak <josejx@gentoo.org> kooka-3.5.0.ebuild:
  Marked ~ppc.

  10 Dec 2005; Bryan Østergaard <kloeri@gentoo.org kooka-3.4.3.ebuild:
  Stable on alpha.

  10 Dec 2005; Chris White <chriswhite@gentoo.org> kooka-3.4.3.ebuild:
  Marked x86 stable for bug #112842.

  09 Dec 2005; Joseph Jezak <josejx@gentoo.org> kooka-3.4.3.ebuild:
  Marked ppc stable for bug #112842.

  04 Dec 2005; Bryan Østergaard <kloeri@gentoo.org> kooka-3.5.0.ebuild:
  ~alpha keyword.

  30 Nov 2005; Jason Wever <weeve@gentoo.org> kooka-3.5.0.ebuild:
  Added ~sparc keyword.

  25 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org> kooka-3.4.3.ebuild:
  Stable on amd64, bug 112842.

  24 Nov 2005; Markus Rothe <corsair@gentoo.org> kooka-3.4.3.ebuild:
  Stable on ppc64

  24 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org> kooka-3.4.3.ebuild:
  Stable on sparc wrt #112842

*kooka-3.5.0 (22 Nov 2005)

  22 Nov 2005; Dan Armak <danarmak@gentoo.org> +kooka-3.5.0.ebuild:
  Ebuilds for KDE 3.5.0 final. It is not yet released, and is package.masked.

*kooka-3.5.0_rc1 (12 Nov 2005)

  12 Nov 2005; Dan Armak <danarmak@gentoo.org> +kooka-3.5.0_rc1.ebuild:
  Ebuild for new version 3.5.0_rc1.

  22 Oct 2005; Mark Loeser <halcy0n@gentoo.org> kooka-3.5_beta1.ebuild,
  kooka-3.5.0_beta2.ebuild:
  Adding ~x86 to keywords

*kooka-3.5.0_beta2 (14 Oct 2005)

  14 Oct 2005; Dan Armak <danarmak@gentoo.org> +kooka-3.5.0_beta2.ebuild:
  New version.

*kooka-3.4.3 (13 Oct 2005)

  13 Oct 2005; Dan Armak <danarmak@gentoo.org> +kooka-3.4.3.ebuild:
  New version.

  11 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> kooka-3.4.1.ebuild,
  kooka-3.4.2.ebuild, kooka-3.5_beta1.ebuild: