@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kooka/Attic/kooka-3.4.3.ebuild,v 1.7 2005/12/10 22:10:38 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kooka/Attic/kooka-3.4.3.ebuild,v 1.8 2005/12/29 10:45:50 greg_g Exp $
 
 KMNAME=kdegraphics
 MAXKDEVER=$PV
@@ -9,7 +9,7 @@ inherit kde-meta eutils
 
 DESCRIPTION="Kooka is a KDE application which provides access to scanner hardware"
 KEYWORDS="alpha amd64 ppc ppc64 sparc x86"
-IUSE="kadmos"
+IUSE=""
 DEPEND="$(deprange $PV $MAXKDEVER kde-base/libkscan)
 	media-libs/tiff"
 OLDDEPEND="~kde-base/libkscan-$PV"
@@ -17,10 +17,9 @@ OLDDEPEND="~kde-base/libkscan-$PV"
 KMCOPYLIB="libkscan libkscan"
 KMEXTRACTONLY="libkscan"
 
-# Fix detection of gocr (kde bug 90082). Applied to trunk upstream, but not backported to branch as of 3.4.2.
+# Fix detection of gocr (kde bug 90082). Applied for 3.5.
 PATCHES1="${FILESDIR}/kdegraphics-3.4.1-gocr.patch"
 
-# There's no ebuild for kadmos, and likely will never be since it isn't free, but you can enable this use flag
-# to compile against the kadmos headers you installed yourself
+# There's no ebuild for kadmos, and likely will never be since it isn't free.
 PATCHES="$FILESDIR/configure-fix-kdegraphics-kadmos.patch"
-myconf="$myconf $(use_with kadmos)"
+myconf="$myconf --without-kadmos"
